Add unit tests for ExpedienteController, AuthService, and middleware; integrate Jest for testing framework
- Added Jest as a testing framework with coverage support in package.json.
- Created unit tests for ExpedienteController covering CRUD operations.
- Implemented tests for auth middleware to validate token handling.
- Developed role middleware tests to ensure proper role-based access control.
- Added AuthService tests to verify login and registration functionalities.
- Created tests for ExpedienteService to validate business logic for expediente management.
- Updated tsconfig.json to include Jest types for TypeScript support.

--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,8 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
     "typeorm": "typeorm-ts-node-commonjs"
   },
   "keywords": [],
@@ -30,6 +32,11 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
+    "@types/jest": "^29.5.11",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "supertest": "^6.3.3",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
