--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
+    "@types/mssql": "^9.1.5",
     "@types/jest": "^29.5.11",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
